2002-06-03  John Sullivan  <sullivan@apple.com>

	Richard told me which line to change to fix 2944237
	(Stop item in View menu enabled on startup if you have
	no home page.)

	* WebView.subproj/IFWebDataSource.mm:
	(-[IFWebDataSource isLoading]):
	Don't return YES if !_private->loading.

2002-06-01  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFImageRenderer.m:
	(-[IFImageRenderer beginAnimationInView:inRect:fromRect:]):
	Remove an assert I added, since it is firing, and instead fixed the storage leak
	that inspired me to put the assert in.

2002-05-31  Darin Adler  <darin@apple.com>

	* WebView.subproj/IFWebViewPrivate.mm: Add include to prepare for change to WebCore
	that will make it required.

2002-05-31  Darin Adler  <darin@apple.com>

	* WebCoreSupport.subproj/IFImageRenderer.h: Fixed the line endings (they were
	Macintosh CRs instead of Unix LFs). Also made all the methods be private for
	now since there's no need to have them be public.

	* WebCoreSupport.subproj/IFImageRenderer.m: Fixed the line endings (they were
	Macintosh CRs instead of Unix LFs). Some minor code tweaks too sharing a bit
	more code.

	* WebCoreSupport.subproj/IFImageRendererFactory.m:
	(-[IFImageRendererFactory imageRendererWithSize:]): Return an IFImageRenderer
	rather than just an NSImage, since an NSImage does not satisfy WebCoreImageRenderer.

2002-05-31  Darin Adler  <darin@apple.com>

	* Misc.subproj/WebKitDebug.h: Use displayableString in DEBUG_OBJECT
	for nicer logging.

	* WebView.subproj/IFWebView.mm:
	(-[IFWebView keyDown:]):
	(-[IFWebView keyUp:]):
	Use DEBUG_OBJECT so we don't get exceptions when the key characters
	are not simple ASCII characters.

2002-05-30  Richard Williamson  <rjw@apple.com>

    API and comment cleanup.
    
	* WebView.subproj/IFWebFrame.h:
	* WebView.subproj/IFWebFrame.mm:
	(-[IFWebFrame setProvisionalDataSource:]):

2002-05-30  Maciej Stachowiak  <mjs@apple.com>

	WebKit parts of fixes for:

	Radar 2926169 - no support for window.open