@@ -1,3 +1,9 @@
+2002-06-03  Darin Adler  <darin@apple.com>
+
+	* WebCoreSupport.subproj/IFImageRenderer.m:
+	(-[IFImageRenderer beginAnimationInView:inRect:fromRect:]): Remove the "fix"
+	for the nonexistent storage leak. Richard showed me the error of my ways.
+
 2002-06-03  John Sullivan  <sullivan@apple.com>
 
 	Richard told me which line to change to fix 2944237
